# Last-Dices-terminal-school

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
data/ai_pathway/: modules.yaml  project_ladder.yaml
data/curriculum/: assignment_bank.yaml  curriculum.yaml  manifest.yaml  quiz_bank.yaml  year1.yaml  year2.yaml  year3.yaml
data/domain/: assignments.yaml  scenarios.yaml  tracks.yaml
data/scenarios/: scenarios.yaml
docs/: 30_day_plan.md  APP_GUIDE.md  IMPLEMENTATION_PLAN.md  MASTER_SCOPE.md  STATUS.md
examples/: agent_calls.py
scripts/: bootstrap.sh  bootstrap_kali.sh  run_app.sh  run_school.sh  run_watcher.sh  scan_imports.sh
src/last_dices_terminal_school/: __init__.py  import_cli.py  main.py  setup_seed.py  watch_imports.py
src/last_dices_terminal_school/agents/: __init__.py  ai_builder.py  assignment_marker.py  base.py  hub.py  logistics_mentor.py  quiz_master.py  red_blue_reflector.py  study_coach.py
src/last_dices_terminal_school/ai/: __init__.py  contracts.py  providers.py  service.py
src/last_dices_terminal_school/app/: __init__.py  school_app.py  theme.tcss  tui.py
tests/: test_ai_agents_layer.py  test_ai_pathway_service.py  test_assignment_engine.py  test_assignment_service.py  test_clamav_scanner.py  test_curriculum_engine.py  test_curriculum_loader.py  test_domain_service.py  test_material_import_service.py  test_progress_service.py  test_quiz_engine.py  test_quiz_service.py  test_regression_syntax_guards.py  test_reporting.py  test_seed_setup.py  test_settings_paths.py
(+45 files in other folders)
